Change download link for Birr application
Updated the download link for the Birr application.

--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
     <img src="logo.png" alt="لوغو Birr">
     <h1>تطبيق بر</h1>
     <p class="subtitle">طريقك للدكر</p>
-    <a href="https://github.com/USERNAME/REPO/raw/main/Birr.apk" class="download-btn" download>
+    <a href="Birr.apk" class="download-btn" download>
         <i class="fab fa-android"></i> تحميل التطبيق
     </a>
 </body>
 </html>
+
