Change download link in index.html
Updated download link for the Birr application.

--- a/index.html
+++ b/index.html
@@ -96,9 +96,10 @@
     <img src="logo.png" alt="لوغو Birr">
     <h1>تطبيق بر</h1>
     <p class="subtitle">طريقك للدكر</p>
-    <a href="Birr.apk" class="download-btn" download>
+    <a href="https://github.com/Ykcodex1001/Birr.app/releases/download/v1.0/application-18417818-ae24-410b-a367-5716ad6fb691.apk" class="download-btn" download>
         <i class="fab fa-android"></i> تحميل التطبيق
     </a>
 </body>
 </html>
+
 
